[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous regulatory-genomics architecture search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "pyarrow>=21.0.0",
    "requests>=2.32.0",
    "torch==2.9.1",
]

[tool.uv.sources]
# Use the CUDA build of torch on Linux; on macOS/other platforms fall back to the
# default PyPI wheel (CPU / MPS), so the genomics experiment runs locally without a GPU.
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
